First maybe working algorithm integration only with gamestate evaluation, no Piece Move evaluation yet.